Revert "Added Tooltip for Everyone's Use (In Entities)"

--- a/Project/src/main/resources/application/welcome_main.fxml
+++ b/Project/src/main/resources/application/welcome_main.fxml
@@ -3,8 +3,12 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
+
 <StackPane alignment="BOTTOM_CENTER" minHeight="720.0" minWidth="1280.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.UIControllerWM">
    <children>
       <ImageView fx:id="backgroundImage" onDragDetected="#initialize" pickOnBounds="true">
