--- a/Project/src/main/resources/pathfinding/path_finding_context_menu.fxml
+++ b/Project/src/main/resources/pathfinding/path_finding_context_menu.fxml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import java.lang.String?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import java.lang.String?>
+
 <StackPane prefHeight="250.0" prefWidth="350.0" style="-fx-border-color: #ffc41e; -fx-border-width: 5; -fx-background-color: #015080;" stylesheets="@../css/background.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pathfinding.UIControllerPFCM">
    <styleClass>
       <String fx:value="stack_pane_context" />
