--- a/Project/src/main/resources/css/background.css
+++ b/Project/src/main/resources/css/background.css
@@ -221,6 +221,14 @@
 .tab-header-background-login{
     -fx-background-color: #FFC41E;
 }
+/*
+
+ */
+.tab-header-background-about{
+   -fx-background-color: #015080;
+}
+
+
 
 
 
@@ -403,4 +411,9 @@
     -fx-font-weight: bold;
     -fx-text-fill: white;
     -fx-alignment: center;
+}
+
+.text-about{
+    -fx-font-weight: bold italic;
+    -fx-text-fill: #015080;
 }
