--- a/Project/src/main/resources/application/about_page.fxml
+++ b/Project/src/main/resources/application/about_page.fxml
@@ -17,14 +17,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<StackPane alignment="TOP_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="720.0" minWidth="1280.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.UIControllerAP">
+<StackPane alignment="TOP_RIGHT" minHeight="720.0" minWidth="1280.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.UIControllerAP">
    <cursor>
       <Cursor fx:constant="DEFAULT" />
    </cursor>
    <children>
       <BorderPane>
          <top>
-            <MenuBar fx:id="back" style="-fx-background-color: #ffffff;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
+            <MenuBar style="-fx-background-color: #ffffff;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
               <menus>
                 <Menu fx:id="back" mnemonicParsing="false" onAction="#setBack" onShowing="#setBack" text="Back">
                   <items>
