--- a/BabySittingAPI/src/main/resources/overall.fxml
+++ b/BabySittingAPI/src/main/resources/overall.fxml
@@ -4,8 +4,8 @@
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerOverall">
-    <JFXTabPane fx:id="tabPane" tabClosingPolicy="UNAVAILABLE">
+<AnchorPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerOverall">
+    <JFXTabPane fx:id="tabPane" tabClosingPolicy="UNAVAILABLE" minHeight="720.0" minWidth="1280.0">
         <Tab text="Create Service Request">
             <AnchorPane fx:id="createTabPane">
 
