--- a/Project/src/main/resources/servicerequests/service_request_flower_delivery.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_flower_delivery.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextArea?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
@@ -62,12 +63,14 @@
                   <RowConstraints minHeight="10.0" percentHeight="5.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" percentHeight="5.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" percentHeight="5.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" percentHeight="5.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" percentHeight="5.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" percentHeight="5.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <FlowPane alignment="CENTER" prefWidth="176.0" prefWrapLength="0.0" GridPane.columnIndex="1" GridPane.rowIndex="10">
+                  <FlowPane alignment="CENTER" prefWidth="176.0" prefWrapLength="0.0" GridPane.columnIndex="1" GridPane.rowIndex="12">
                      <children>
                         <JFXButton fx:id="confirmButton" onAction="#setConfirmButton" styleClass="jfx-button_edit" stylesheets="@../css/background.css" text="Confirm" />
                         <JFXButton contentDisplay="CENTER" onMouseClicked="#setCancelButton" styleClass="jfx-button-cancel" stylesheets="@../css/background.css" text=" ">
@@ -95,7 +98,7 @@
                      </font>
                   </Text>
                   <ChoiceBox fx:id="roomSelect" prefWidth="150.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Message" GridPane.columnIndex="1" GridPane.rowIndex="8">
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Message" GridPane.columnIndex="1" GridPane.rowIndex="10">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
@@ -115,8 +118,8 @@
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <JFXTextArea fx:id="serviceMessage1" accessibleRole="TEXT_AREA" prefHeight="220.0" prefWidth="120.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="1" GridPane.rowIndex="9" />
-                   <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Message" GridPane.columnIndex="1" GridPane.rowIndex="8">
+                  <JFXTextArea fx:id="serviceMessage1" accessibleRole="TEXT_AREA" prefHeight="220.0" prefWidth="120.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="1" GridPane.rowIndex="11" />
+                   <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Message" GridPane.columnIndex="1" GridPane.rowIndex="10">
                        <font>
                            <Font name="System Bold" size="18.0" />
                        </font>
@@ -127,6 +130,12 @@
                      </font>
                   </Text>
                   <ChoiceBox fx:id="roomCategory" prefWidth="150.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Phone Number" GridPane.columnIndex="1" GridPane.rowIndex="8">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Text>
+                  <JFXTextField fx:id="phoneNum" prefHeight="31.0" prefWidth="177.0" style="-fx-background-color: White;" GridPane.columnIndex="1" GridPane.rowIndex="9" />
                </children>
                <padding>
                   <Insets left="20.0" />
