--- a/Project/src/main/resources/pathfinding/path_find_main.fxml
+++ b/Project/src/main/resources/pathfinding/path_find_main.fxml
@@ -124,17 +124,26 @@
                                  </font>
                                  <graphic>
                                      <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                                         <Image url="@/icon/zoom-in.png" />
+                                         <Image url="@../images/zoom-in.png" />
                                      </ImageView>
                                  </graphic>
                              </JFXButton>
+                           <JFXButton fx:id="serviceRequestButton" contentDisplay="CENTER" graphicTextGap="0.0" onAction="#setServiceRequestButton" styleClass="jfx-button-zoom" stylesheets="@../css/background.css" text=" " AnchorPane.leftAnchor="2.0" AnchorPane.topAnchor="150.0">
+                        <graphic>
+                           <ImageView fitHeight="55.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
+                              <image>
+                                 <Image url="@../images/sR.png" />
+                              </image>
+                           </ImageView>
+                        </graphic>
+                     </JFXButton>
                              <JFXButton contentDisplay="CENTER" layoutX="4.0" layoutY="79.0" mnemonicParsing="false" onAction="#unZoom" prefWidth="100.0" styleClass="jfx-button-zoom" stylesheets="@../css/background.css" text=" " textFill="WHITE">
                                  <font>
                                      <Font name="System Bold" size="14.0" />
                                  </font>
                                  <graphic>
                                      <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                                         <Image url="@/icon/zoom-out.png" />
+                                         <Image url="@../images/zoom-out.png" />
                                      </ImageView>
                                  </graphic>
                              </JFXButton>
@@ -181,14 +190,14 @@
                             </font>
                         </Text>
                         <JFXComboBox fx:id="destinationCombo" prefWidth="150.0" style="-fx-background-color: #ffffff;" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
-                        <JFXButton contentDisplay="CENTER" graphicTextGap="0.0" onAction="#cancel" prefWidth="100.0" style="-fx-background-color: transparent;" styleClass="jfx-button-login" stylesheets="@/css/background.css" text=" " textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER">
+                        <JFXButton alignment="TOP_CENTER" contentDisplay="CENTER" graphicTextGap="0.0" onAction="#cancel" prefWidth="100.0" style="-fx-background-color: transparent;" text=" " textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER">
                             <font>
                                 <Font name="System Bold" size="14.0" />
                             </font>
                      <graphic>
-                        <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../images/cancel2.png" />
+                              <Image url="@../images/cancel4.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -198,13 +207,12 @@
                                 <Font name="System Bold" size="14.0" />
                             </font>
                         </JFXToggleButton>
-                        <JFXButton fx:id="directionsRequest" onAction="#directionSelection" prefHeight="88.0" prefWidth="177.0" style="-fx-background-color: #33a6e7;" styleClass="jfx-button-login" stylesheets="@/css/background.css" text="Do you want directions?" textAlignment="CENTER" textFill="WHITE" wrapText="true" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER">
+                        <JFXButton fx:id="directionsRequest" onAction="#directionSelection" prefHeight="88.0" prefWidth="177.0" style="-fx-background-color: transparent;" styleClass="jfx-button-login" stylesheets="@/css/background.css" text="Do you want directions?" textAlignment="CENTER" textFill="WHITE" wrapText="true" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER">
                             <font>
                                 <Font name="System Bold" size="14.0" />
                             </font>
                         </JFXButton>
-                        <JFXButton fx:id="loginButton" onAction="#setLoginButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Login" GridPane.halignment="CENTER" GridPane.rowIndex="9" GridPane.valignment="TOP" />
-                        <JFXButton fx:id="serviceRequestButton" onAction="#setServiceRequestButton" style="-fx-background-color: #33a6e7;" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Service Request" GridPane.halignment="CENTER" GridPane.rowIndex="8" />
+                        <JFXButton fx:id="loginButton" onAction="#setLoginButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Login" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="TOP" />
                   <JFXButton fx:id="aboutButton" onAction="#setAboutButton" style="-fx-background-color: #0090d3;" styleClass="jfx-button-add" stylesheets="@../css/background.css" text="About Us" GridPane.halignment="CENTER" GridPane.rowIndex="10" GridPane.valignment="BOTTOM" />
                     </children>
                 </GridPane>
