--- a/Project/src/main/resources/admintools/ATMV_addNode_popup.fxml
+++ b/Project/src/main/resources/admintools/ATMV_addNode_popup.fxml
@@ -1,19 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXTextField?>
-<?import javafx.geometry.Insets?>
+<?import com.jfoenix.controls.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
-
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <StackPane fx:id="parentPane" prefHeight="500.0" prefWidth="600.0" style="-fx-background-color: BLACK;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admintools.UIControllerPUMVAN">
    <ImageView fitHeight="500.0" fitWidth="600.0" pickOnBounds="true">
       <image>
@@ -160,7 +152,7 @@
       <AnchorPane prefHeight="200.0" prefWidth="600.0" style="-fx-background-color: #ffc41e;" />
       <AnchorPane prefHeight="200.0" prefWidth="600.0" style="-fx-background-color: #ffc41e;" GridPane.columnIndex="1" />
     </GridPane>
-   <Text fill="#081644" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Node" StackPane.alignment="TOP_CENTER">
+   <Text fx:id="titleText" fill="#081644" strokeType="OUTSIDE" strokeWidth="0.0" text="Add/Edit Node" StackPane.alignment="TOP_CENTER">
       <font>
          <Font name="System Bold Italic" size="17.0" />
       </font>
