context menu pathfinding

--- a/Project/src/main/resources/pathfinding/path_finding_context_menu.fxml
+++ b/Project/src/main/resources/pathfinding/path_finding_context_menu.fxml
@@ -11,34 +11,30 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<StackPane prefHeight="250.0" prefWidth="350.0" style="-fx-border-color: #ffc41e; -fx-border-width: 5; -fx-background-color: #015080;" stylesheets="@../css/background.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pathfinding.UIControllerPFCM">
+<StackPane minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" style="-fx-border-color: #ffc41e; -fx-border-width: 5; -fx-background-color: #015080;" stylesheets="@../css/background.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pathfinding.UIControllerPFCM">
    <styleClass>
       <String fx:value="stack_pane_context" />
       <String fx:value="root_context" />
    </styleClass>
    <children>
       <GridPane>
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" percentHeight="40.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" percentHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+         </rowConstraints>
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Select As" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+            <Text fx:id="text" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Set As" GridPane.columnSpan="2" GridPane.halignment="CENTER">
                <font>
-                  <Font name="System Bold Italic" size="28.0" />
+                  <Font name="System Bold Italic" size="61.0" />
                </font>
             </Text>
-            <JFXButton fx:id="startButton" contentDisplay="TOP" onAction="#setStartButton" style="-fx-background-color: #ffc41e;" text="Start Location" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <JFXButton fx:id="startButton" contentDisplay="TOP" onAction="#setStartButton" style="-fx-background-color: #ffc41e;" text="Start Location" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <graphic>
-                  <ImageView fitHeight="150.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/Start.png" />
                      </image>
@@ -48,9 +44,9 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="destinationButton" contentDisplay="TOP" onAction="#setDestinationButton" style="-fx-background-color: #ffc41e;" text="Destination" GridPane.columnIndex="3" GridPane.rowIndex="1">
+            <JFXButton fx:id="destinationButton" contentDisplay="TOP" onAction="#setDestinationButton" style="-fx-background-color: #ffc41e;" text="Destination" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <graphic>
-                  <ImageView fitHeight="150.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/flag.png" />
                      </image>
