--- a/Project/src/main/resources/servicerequests/service_request_prescription_services_main.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_prescription_services_main.fxml
@@ -30,13 +30,13 @@
             </ImageView>
             <BorderPane>
                 <top>
-                    <MenuBar blendMode="ADD" prefWidth="600.0" style="-fx-background-color: white;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
+                    <MenuBar blendMode="ADD" nodeOrientation="LEFT_TO_RIGHT" style="-fx-background-color: white;" stylesheets="@../css/background.css" BorderPane.alignment="TOP_LEFT">
                         <menus>
-                            <Menu mnemonicParsing="false" onAction="#setCancelButton" onShowing="#setHomeButton" text="Back">
-                     <items>
-                        <MenuItem mnemonicParsing="false" text="HOME" />
-                     </items>
-                  </Menu>
+                            <Menu fx:id="homeButton" mnemonicParsing="false" onAction="#setHomeButton" onShowing="#setHomeButton" text="Back">
+                                <items>
+                                    <MenuItem mnemonicParsing="false" text="HOME" />
+                                </items>
+                            </Menu>
                         </menus>
                         <effect>
                             <ColorAdjust>
